namespace java com.isuwang.dapeng.demo.enums

/**
* 订单支付方式
**/
enum PayTypeEnum {
    /**
     * 微信
    **/
    WeChat = 1,
    /**
     * 支付宝
    **/
    AliPay = 2,
    /**
     * 银行转账
    **/
    Bank = 3,
}

